--- a/public/views/templates/admin-intern.html
+++ b/public/views/templates/admin-intern.html
@@ -1,73 +1,66 @@
-<div class="adminIntern">
+<!-- <div class="adminIntern"> -->
   <title>Admin Intern View</title>
   <md-toolbar id="toolbar" layout="column" style="height:50px">
     <h1 id="toolBarText">Intern Data Overview</h1>
   </md-toolbar>
-  <style>
-  /*list styles*/
-  ul.a {
-    list-style-type: circle;
-  }
-  /*list style end*/
-  </style>
-  <!-- contact interns list -->
 
-  <!-- <md-button ng-click="AIC.getNumericData()">Get Data</md-button> -->
-  <!-- <md-button ng-click="AIC.getComments()">Get Comments</md-button> -->
-  <!-- <md-button ng-click="AIC.getCheckbox()">Get Checkbox</md-button> -->
-  <!-- <md-button ng-click="AIC.getFlags()">Get Flags</md-button> -->
-  <!-- <md-button ng-click="AIC.getData()">Get Checkboxes</md-button> -->
 
-<!--
-  <h2>Achieve: 30% have responded</h2>
-  <h2>Discover: 50% have responded</h2> -->
-  <md-content class="adminIntern">
+  <md-content class="pageContent" layout="row">
+    <md-card layout-padding flex>
     <h2>Contact these Interns:</h2>
-    <!-- {{AIC.checkbox[0].first_name}} {{AIC.checkbox[0].last_name}} {{AIC.checkbox[0].phone}} {{AIC.checkbox[0].email}} {{AIC.checkbox[0].created}}
-    {{AIC.checkbox[1].first_name}} {{AIC.checkbox[1].last_name}} {{AIC.checkbox[1].phone}} {{AIC.checkbox[1].email}} {{AIC.checkbox[1].created}}
-    {{AIC.checkbox[2].first_name}} {{AIC.checkbox[2].last_name}} {{AIC.checkbox[2].phone}} {{AIC.checkbox[2].email}} {{AIC.checkbox[2].created}} -->
 
     <div ng-repeat="checkbox in AIC.checkbox">
         <p>{{checkbox.first_name}} {{checkbox.last_name}} {{checkbox.phone}} {{checkbox.email}}</p>
     </div>
-    <md-button ng-click="AIC.getCheckbox()">View All</md-button>
+    <!-- <md-button ng-click="AIC.getCheckbox()">View All</md-button> -->
+</md-card>
 
-    <!-- <ul class="a">
-      <md-list flex>FirstName, LastName, Phone</md-list>
-      <md-list flex>FirstName, LastName, Phone</md-list>
-      <md-list flex>FirstName, LastName, Phone</md-list>
-    </ul> -->
-  </md-content>
-  <md-content class="adminIntern">
+<md-card  layout-padding flex>
     <h2>Flagged Interns:</h2>
     <div ng-repeat="flag in AIC.flags">
         <p>{{flag.first_name}} {{flag.last_name}} {{flag.phone}} {{flag.email}} </p>
     </div>
-    <md-button ng-click="AIC.getFlags()">View All</md-button>
+    <!-- <md-button ng-click="AIC.getFlags()">View All</md-button> -->
+  </md-card>
 
-    <!-- <ul class="a">
-      <md-list flex>FirstName, LastName, Phone</md-list>
-      <md-list flex>FirstName, LastName, Phone</md-list>
-      <md-list flex>FirstName, LastName, Phone</md-list>
-    </ul> -->
-  </md-content>
+  <md-card layout-padding flex>
   <h2>Comments:</h2>
   <div ng-repeat="comment in AIC.comments">
       <p>"{{comment.response_comment}}" -  {{comment.first_name}} {{comment.last_name}} {{comment.phone}} {{comment.email}}</p>
   </div>
-  <md-button ng-click="AIC.getComments()">View All</md-button>
+  <!-- <md-button ng-click="AIC.getComments()">View All</md-button> -->
+</md-card>
+</md-content>
 
+<h3>Data Overview</h3>
+
+<div class= "charts" layout="row">
+<md-card layout-padding layout-margin flex>
   <canvas id="myChart" width="400" height="400"></canvas>
+</md-card>
+
+  <md-card layout-padding layout-margin flex>
+
   <canvas id="myChart2" width="400" height="400"></canvas>
+</md-card>
+
+  <md-card layout-padding layout-margin flex>
+
   <canvas id="myChart3" width="400" height="400"></canvas>
-  <canvas id="myChart4" width="400" height="400"></canvas>
-  <canvas id="myChart5" width="400" height="400"></canvas>
-
-
-  <!-- <md-tabs>
-    <md-tab label="Comment #1"><p>Woohoo this is the start</p></md-tab>
-    <md-tab label="Comment #2"><p>Caribou rocks</p></md-tab>
-    <md-tab label="Comment #3"><p>Comment tabs are super cool!</p></md-tab>
-    <md-tab><a href="" md-highlight-text="searchTerm">View All Comments</a></md-tab>
-  </md-tabs> -->
+</md-card>
 </div>
+<div class= "charts2" layout="row">
+
+  <md-card layout-padding layout-margin flex="33">
+
+  <canvas id="myChart4" width="400" height="400"></canvas>
+</md-card>
+
+  <md-card layout-padding layout-margin flex="33">
+
+  <canvas id="myChart5" width="400" height="400"></canvas>
+</md-card>
+
+</div>
+
+</md-content>
