--- a/public/views/templates/importExport.html
+++ b/public/views/templates/importExport.html
@@ -1,28 +1,34 @@
-<main class="container" ng-app="theGoogles">
-  <div class="importExportMain">
+<main class="container" ng-app="theGoogles" >
+  <!-- <div class="importExportMain"> -->
+
     <!-- <div class="importExport">
       <h1>Annual Import/Export</h1>
     </div> -->
     <md-toolbar id="toolbar" layout="column" style="height:50px">
-      <h1 id="toolBarText">Annual Data Import and Export</h1>
+      <h1 id="toolBarText">Data Import and Export</h1>
     </md-toolbar>
-    <div class="importFileContainer">
-      <br>
-      <h3>Please select the CSV file that you'd like to import!</h3>
+    <md-content class="pageContent" layout="row">
+
+    <md-card layout-padding flex class="importFileContainer">
+      <h2>Annual Intern Data Import</h2>
+      <h3>Please select the intern CSV file:</h3>
       <input type="file" id="files" name="file" accept=".csv"/>
       <div id="progress_bar"><div class="percent">0%</div></div>
-    </div>
+    </md-card>
     <!-- <md-button class="md-raised md-primary" ng-click="IEC.uploadInterns()" style="background-color: #008AC0"> -->
       <!-- <label>Import Interns</label> -->
     <!-- </md-button> -->
 
     <!-- <button ng-click="IEC.importInterns()" class="md-raised md-primary" type="button" name="button" md-button>Import</button> -->
-    <h2>Export Response Data</h2><button ng-click="IEC.exportResponseData()" class="md-raised md-primary" type="button" name="button" style="background-color: #008AC0" md-button>Export</button>
-    <br><br><br><br>
-    <h2>Remove Interns:</h2>
-    <h3>Lastname: </h3>
+    <md-card layout-padding flex>
+    <h2>Download Response Report</h2><button ng-click="IEC.exportResponseData()" class="md-raised md-primary" type="button" name="button" style="background-color: #008AC0" md-button>Export</button></md-card>
+  </md-content>
+<md-content class="pageContent">
+    <md-card layout-padding>
+    <h2>Remove Interns from System</h2>
+    <!-- <h3>Last name: </h3> -->
     <md-input-container>
-      <label>Search by Lastname</label>
+      <label>Search by last name</label>
       <input ng-model="IEC.lastNameIn" type="text">
       <button ng-click="IEC.searchByLastName(IEC.lastNameIn)" class="md-raised md-primary" style="background-color: #008AC0" type="button" name="button" md-button>Submit</button>
       <div ng-repeat="intern in IEC.lastNameMatch.name">
@@ -37,5 +43,8 @@
         </md-content>
       </div>
     </md-input-container>
-  </div>
+    </md-card>
+  <!-- </div> -->
+</md-content>
+
 </main>
