--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -9,11 +9,12 @@ html, body, nav {
 #toolbar {
   background-color: #008AC0;
   color: white;
-  margin: .5em;
+  /*margin: .5em;*/
+
 }
 
 #toolBarText {
-  margin-left: 3vmin;
+  margin: 4vmin;
   font-size: 1.2em;
 }
 
@@ -45,17 +46,14 @@ md-nav-bar md-nav-ink-bar {
   padding:0px;
 }
 
-.hello {
-  align-items: baseline;
-}
 
 .stepUp {
   height: auto;
   width: 150px;
   /*margin: auto;*/
   display: inline;
-  align-self: left;
-  align-content: left;
+  /*align-self: left;*/
+  /*align-content: left;*/
 
   /*position: absolute;*/
   /*margin: -1em;*/
@@ -67,7 +65,7 @@ md-nav-bar md-nav-ink-bar {
   /*text-align: center;*/
   font-family: 'Oswald', sans-serif;
   color: #008AC0;
-  text-decoration: underline;
+  /*text-decoration: underline;*/
   /*font-size: 5vw;*/
 }
 
@@ -80,7 +78,7 @@ md-nav-bar md-nav-ink-bar {
 
 /* nav */
 nav {
-  text-align: center;
+  text-align: right;
 }
 
 a:link {
@@ -99,6 +97,10 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 
+.pageContent {
+  margin: 4vmin;
+}
+
 /***************************
 admin-home
 ****************************/
@@ -107,7 +109,7 @@ admin-home
 }
 
 .adminHome {
-  background-color: #e8e8ee;
+  /*background-color: #e8e8ee;*/
   margin-left: 3vmin;
 }
 
@@ -115,8 +117,8 @@ admin-home
 admin-intern
 ****************************/
 .adminIntern {
-  margin-left: 3vmin;
-  background-color: #e8e8ee;
+  /*margin-left: 3vmin;*/
+  /*background-color: #e8e8ee;*/
 }
 
 /***************************
@@ -128,15 +130,20 @@ feddbackform
     transform: scale(2);
 }*/
 
-.feedbackform {
-  /*text-align: center;*/
+.questionFeedback {
+  font-size: 5vw;
+}
+
+.questionFeedback p {
+  font-size: 5vw;
+
 }
 
 /***************************
 Import-Export
 ****************************/
 .importExportMain {
-  margin-left: 3vmin;
+  /*margin-left: 3vmin;*/
 }
 
 .mainButtons {
@@ -194,7 +201,9 @@ updateQuestion
 
 .pickQuestions,
 .create, .pickAdmin{
-  text-align: center;
+  /*text-align: center;*/
+  /*margin: 4vmin;*/
+
 }
 
 #addQuestion {
@@ -203,6 +212,8 @@ updateQuestion
 
 #sendFeedback {
   background-color: #F68628;
+  font-size: 2em;
+  padding: .5em;
 }
 
 .addQuestion {
