--- a/public/views/index.html
+++ b/public/views/index.html
@@ -52,28 +52,32 @@
 
 
       <!-- <md-list layout="row" layout-align="center" class="six columns" ng-show="nav.displayLogout">Hi {{nav.username}}! | <a href="#" ng-click="nav.logout()">Logout</a></md-list> -->
-      <div layout="row" ng-show="nav.navBar">
-        <md-content >
+      <div layout="row" ng-show="nav.navBar" >
+        <md-content flex="100">
 
 <!-- class="md-padding navPad" layout-align="center" -->
           <!-- <md-colors> -->
           <!-- <span class = "toplogo"><img class="stepUp" src="public/image/STEP-UP logo no tag with white.jpg"></span> -->
           <!-- <span class = "toplogo"><h2 class="CheckIn">Check-<span class="CheckInSpan">In</span></h2></span> -->
-
-          <md-nav-bar class="navBar" aria-label = "navigation ">
-            <!-- <span class = "toplogo"><img class="stepUp" src="public/image/STEP-UP logo no tag with white.jpg"></span> -->
-            <span><img class="stepUp" style= "align: right" layout-align="left" src="public/image/STEP-UP logo no tag with white.jpg"></span>
-              <span><h2 class="CheckIn">Check-<span class="CheckInSpan">In</span></h2></span>
-
-            <md-nav-item md-nav-href="#admin-home" name="Home">Home</md-nav-item>
+          <!-- <span layout="row" layout-align="space-between center"><img class="stepUp" style= "align: right" layout-align="left" src="public/image/STEP-UP logo no tag with white.jpg" ></span> -->
+            <!-- <span layout="row" layout-align="space-between center"><h2 class="CheckIn">Check-<span class="CheckInSpan">In</span></h2></span> -->
+          <md-nav-bar class="navBar" layout-align="end start" layout-padding layout-margin aria-label = "navigation " layout-align="end start">
+            <span layout="column" flex="33" class = "toplogo"><img class="stepUp" src="public/image/STEP-UP logo no tag with white.jpg"></span>
+            <!-- <span layout="row" layout-align="space-between center"><img class="stepUp" style= "align: right" layout-align="left" src="public/image/STEP-UP logo no tag with white.jpg" ></span> -->
+              <span layout="row" layout-padding layout-align="space-between right"><h2 class="CheckIn">Check-<span class="CheckInSpan">In</span></h2></span>
+            <span layout= "row"><md-nav-item md-nav-href="#admin-home" name="Admin">Admin</md-nav-item>
             <md-nav-item md-nav-href="#admin-intern" name="Interns">Interns</md-nav-item>
             <md-nav-item md-nav-href="#updateQuestions" name="Update Questions">Update Questions</md-nav-item>
             <md-nav-item md-nav-href="#importExport" name="Import/Export">Import/Export</md-nav-item>
-            <md-nav-item md-nav-href="#feedbackform" name="Import/Export">Feedback Form</md-nav-item>
-            <md-list layout="row" layout-align="right" class="six columns hello" ng-show="nav.displayLogout">Hi {{nav.username}}! | <a href="#" ng-click="nav.logout()">Logout</a></md-list>
+            <md-nav-item md-nav-href="#feedbackform" name="Feedback Form">Feedback Form</md-nav-item></span>
+            <md-list layout="row"  layout-align="right" ng-show="nav.displayLogout">{{nav.username}} | <a href="#" ng-click="nav.logout()">Logout</a></md-list>
 
           </md-nav-bar>
-          <!-- <md-list layout="row" layout-align="center" class="six columns" ng-show="nav.displayLogout">Hi {{nav.username}}! | <a href="#" ng-click="nav.logout()">Logout</a></md-list> -->
+          <!-- <md-list layout="row" layout-align="right" ng-show="nav.displayLogout">{{nav.username}} | <a href="#" ng-click="nav.logout()">Logout</a></md-list> -->
+
+          <!-- <md-list layout="row" layout-align="right" ng-show="nav.displayLogout">{{nav.username}} | <a href="#" ng-click="nav.logout()">Logout</a></md-list> -->
+
+          <!-- class="six columns hello" <md-list layout="row" layout-align="center" class="six columns" ng-show="nav.displayLogout">Hi {{nav.username}}! | <a href="#" ng-click="nav.logout()">Logout</a></md-list> -->
           <!-- <md-list layout="row" layout-align="center" class="six columns" ng-show="nav.displayLogout">Hi {{nav.username}}! | <a href="#" ng-click="nav.logout()">Logout</a></md-list> -->
 
           <!-- </md-colors> -->
