updates to styling

--- a/public/views/templates/admin-intern.html
+++ b/public/views/templates/admin-intern.html
@@ -1,6 +1,7 @@
 <!-- <div class="adminIntern"> -->
   <title>Admin Intern View</title>
-  <md-toolbar id="toolbar" layout="column" style="height:50px">
+  <md-toolbar id="toolbar" layout="column" >
+    <!-- style="height:50px" -->
     <h1 id="toolBarText">Intern Data Overview</h1>
   </md-toolbar>
 
@@ -11,6 +12,7 @@
 
     <div ng-repeat="checkbox in AIC.checkbox">
         <p>{{checkbox.first_name}} {{checkbox.last_name}} {{checkbox.phone}} {{checkbox.email}}</p>
+        <md-divider></md-divider>
     </div>
     <!-- <md-button ng-click="AIC.getCheckbox()">View All</md-button> -->
 </md-card>
@@ -19,6 +21,7 @@
     <h2>Flagged Interns:</h2>
     <div ng-repeat="flag in AIC.flags">
         <p>{{flag.first_name}} {{flag.last_name}} {{flag.phone}} {{flag.email}} </p>
+        <md-divider></md-divider>
     </div>
     <!-- <md-button ng-click="AIC.getFlags()">View All</md-button> -->
   </md-card>
@@ -27,12 +30,15 @@
   <h2>Comments:</h2>
   <div ng-repeat="comment in AIC.comments">
       <p>"{{comment.response_comment}}" -  {{comment.first_name}} {{comment.last_name}} {{comment.phone}} {{comment.email}}</p>
+      <md-divider></md-divider>
   </div>
   <!-- <md-button ng-click="AIC.getComments()">View All</md-button> -->
 </md-card>
-</md-content>
+</md-content layout-padding layout-margin>
 
-<h3>Data Overview</h3>
+<br />
+<md-card><h3 layout-padding layout-margin layout-align="center center">Responses Overview</h3></md-card>
+<!-- <md-divider></md-divider> -->
 
 <div class= "charts" layout="row">
 <md-card layout-padding layout-margin flex>
