--- a/public/views/templates/feedbackform.html
+++ b/public/views/templates/feedbackform.html
@@ -1,8 +1,8 @@
 <DIV  ng-init="FBFC.getQuestions()">
 
 	<!-- FBFC.checkEmail(FBFC.useremail) -->
-	<md-toolbar id="toolbar" layout="column" style="height:50px">
-    <h1 id="toolBarText">Intern Weekly Feedback</h1>
+	<md-toolbar id="toolbar" layout="column">
+    <h1 id="toolBarText">Weekly Feedback</h1>
   </md-toolbar>
 	<!-- <md-button ng-click="FBFC.getQuestions()">Get Questions</md-button> -->
 	<md-content class="pageContent feedbackform">
@@ -15,7 +15,7 @@
 
 						<md-radio-button value="1"> 1 </md-radio-button>
 						<md-radio-button value="2"> 2 </md-radio-button>
-						<md-radio-button value="3"> 3</md-radio-button>
+						<md-radio-button value="3"> 3 </md-radio-button>
 						<md-radio-button value="4"> 4</md-radio-button>
 						<md-radio-button value="5"> 5</md-radio-button>
 						<!-- <md-radio-button value="1"> not properly trained at all </md-radio-button>
