--- a/public/views/templates/importExport.html
+++ b/public/views/templates/importExport.html
@@ -4,7 +4,7 @@
     <!-- <div class="importExport">
       <h1>Annual Import/Export</h1>
     </div> -->
-    <md-toolbar id="toolbar" layout="column" style="height:50px">
+    <md-toolbar id="toolbar" layout="column">
       <h1 id="toolBarText">Data Import and Export</h1>
     </md-toolbar>
     <md-content class="pageContent" layout="row">
