--- a/public/views/templates/login.html
+++ b/public/views/templates/login.html
@@ -1,6 +1,6 @@
 <!-- Consider this the main view -->
 <!-- <h2 class="login">Login Page</h2> -->
-<md-toolbar id="toolbar" layout="column" style="height:50px">
+<md-toolbar id="toolbar" layout="column">
   <h1 id="toolBarText">Please Log In to Step Up Check In</h1>
 </md-toolbar>
 <!-- Shown for users that are NOT logged in -->
