--- a/public/views/templates/admin-home.html
+++ b/public/views/templates/admin-home.html
@@ -1,6 +1,6 @@
 <div class="adminHomeStyle">
 	<div ng-init="AHC.getAdmins()">
-		<md-toolbar id="toolbar" layout="column" style="height:50px">
+		<md-toolbar id="toolbar" layout="column" >
 			<h1 id="toolBarText">Admin Home</h1>
 		</md-toolbar>
 		<div layout="row">
