fixed questions bug

--- a/public/views/templates/feedbackform.html
+++ b/public/views/templates/feedbackform.html
@@ -1,4 +1,5 @@
-<DIV  ng-init="FBFC.getQuestions()">
+<md-nav-bar ng-hide="state.$current.hideNavbar"></md-nav-bar>
+<div  ng-init="FBFC.getQuestions()">
 
 	<!-- FBFC.checkEmail(FBFC.useremail) -->
 	<md-toolbar id="toolbar" layout="column">
