--- a/public/views/templates/updateQuestions.html
+++ b/public/views/templates/updateQuestions.html
@@ -46,7 +46,7 @@
           </md-select>
         </md-input-container>
         <div class="sendSMS">
-          <md-button ng-click="UQC.submitQuestion(UQC.active1In, UQC.active2In, UQC.active3In, UQC.active4In, UQC.active5In)" class="md-raised md-primary" id="submitQues">Submit Questions</md-button>
+          <md-button ng-click="UQC.submitQuestion($event, UQC.active1In, UQC.active2In, UQC.active3In, UQC.active4In, UQC.active5In)" class="md-raised md-primary" id="submitQues">Submit Questions</md-button>
         </div>
         <br />
         <md-divider></md-divider>
@@ -62,7 +62,7 @@
         <md-button ng-click="UQC.sendQuestion()" class="md-raised md-primary" id="sendFeedback">Send Feedback Link</md-button>
       </div>
       <br> -->
-  </md-card>
+  <!-- </md-card> -->
   <!-- <md-card flex="40" layout-padding layout-margin>
 
       <div class="sendSMS">
