--- a/public/views/templates/updateQuestions.html
+++ b/public/views/templates/updateQuestions.html
@@ -46,30 +46,18 @@
           </md-select>
         </md-input-container>
         <div class="sendSMS">
-          <md-button ng-click="UQC.submitQuestion(UQC.active1In, UQC.active2In, UQC.active3In, UQC.active4In, UQC.active5In)" class="md-raised md-primary" id="submitQues">Submit Questions</md-button>
+          <md-button ng-click="UQC.submitQuestion($event, UQC.active1In, UQC.active2In, UQC.active3In, UQC.active4In, UQC.active5In)" class="md-raised md-primary" id="submitQues">Submit Questions</md-button>
         </div>
         <br />
         <md-divider></md-divider>
         <br />
-        <!-- <md-hr> -->
         <div class="sendSMS">
+          <p>* This will send a text message with the feedback link to all interns *</p>
           <md-button ng-click="UQC.sendQuestion($event)" class="md-raised md-primary" id="sendFeedback">Send Feedback Link</md-button>
         </div>
      </div>
     <md-card-content>
-      <!-- <br>
-      <div class="sendSMS">
-        <md-button ng-click="UQC.sendQuestion()" class="md-raised md-primary" id="sendFeedback">Send Feedback Link</md-button>
-      </div>
-      <br> -->
   </md-card>
-  <!-- <md-card flex="40" layout-padding layout-margin>
-
-      <div class="sendSMS">
-        <md-button ng-click="UQC.submitQuestion($event, UQC.active1In, UQC.active2In, UQC.active3In, UQC.active4In, UQC.active5In)" class="md-raised md-primary" id="submitQues">Submit Questions</md-button>
-      </div>
-  </md-card> -->
-  <!-- <br> -->
   <md-card flex layout-padding layout-margin>
       <h2>Create New Question</h2>
       <md-input-container class="md-block">
@@ -85,12 +73,4 @@
         <md-button ng-click ="UQC.addQuestion($event, UQC.questionIn, UQC.flaggedIn)" class="md-raised md-primary" id="addQuestion">Add Question</md-button>
       </div>
     </md-card>
-    <!-- <br>
-    <br>
-     RIGHT BUTTON: -->
-    <!-- <div class="sendSMS">
-      <md-button ng-click="UQC.sendQuestion($event)" class="md-raised md-primary" id="sendFeedback">Send Feedback Link</md-button>
-    </div>
-    <br> -->
-  <!-- </div> -->
 </main>
