--- a/public/views/templates/admin-intern.html
+++ b/public/views/templates/admin-intern.html
@@ -1,72 +1,78 @@
 <!-- <div class="adminIntern"> -->
-  <title>Admin Intern View</title>
-  <md-toolbar id="toolbar" layout="column" >
+<title>Admin Intern View</title>
+<md-toolbar id="toolbar" layout="column">
     <!-- style="height:50px" -->
     <h1 id="toolBarText">Intern Data Overview</h1>
-  </md-toolbar>
+</md-toolbar>
 
 
-  <md-content class="pageContent" layout="row">
+<md-content class="pageContent" layout="row">
     <md-card layout-padding flex>
-    <h2>Contact these Interns:</h2>
+        <h2>Contact these Interns:</h2>
 
-    <div ng-repeat="checkbox in AIC.checkbox">
-        <p>{{checkbox.first_name}} {{checkbox.last_name}} {{checkbox.phone}} {{checkbox.email}}</p>
-        <md-divider></md-divider>
-    </div>
-    <!-- <md-button ng-click="AIC.getCheckbox()">View All</md-button> -->
-</md-card>
+        <div ng-repeat="checkbox in AIC.checkbox">
+            <p>{{checkbox.first_name}} {{checkbox.last_name}} {{checkbox.phone}} {{checkbox.email}}</p>
+            <md-divider></md-divider>
+        </div>
+        <!-- <md-button ng-click="AIC.getCheckbox()">View All</md-button> -->
+    </md-card>
 
-<md-card  layout-padding flex>
-    <h2>Flagged Interns:</h2>
-    <div ng-repeat="flag in AIC.flags">
-        <p>{{flag.first_name}} {{flag.last_name}} {{flag.phone}} {{flag.email}} </p>
-        <md-divider></md-divider>
-    </div>
-    <!-- <md-button ng-click="AIC.getFlags()">View All</md-button> -->
-  </md-card>
+    <md-card layout-padding flex>
+        <h2>Flagged Interns:</h2>
+        <div ng-repeat="flag in AIC.flags">
+            <p>{{flag.first_name}} {{flag.last_name}} {{flag.phone}} {{flag.email}} </p>
+            <md-divider></md-divider>
+        </div>
+        <!-- <md-button ng-click="AIC.getFlags()">View All</md-button> -->
+    </md-card>
 
-  <md-card layout-padding flex>
-  <h2>Comments:</h2>
-  <div ng-repeat="comment in AIC.comments">
-      <p>"{{comment.response_comment}}" -  {{comment.first_name}} {{comment.last_name}} {{comment.phone}} {{comment.email}}</p>
-      <md-divider></md-divider>
-  </div>
-  <!-- <md-button ng-click="AIC.getComments()">View All</md-button> -->
-</md-card>
-</md-content layout-padding layout-margin>
+    <!-- <md-content > -->
+    <md-card layout-padding>
+        <h2>Comments:</h2>
+        <div ng-repeat="comment in AIC.comments">
+            <p>"{{comment.response_comment}}" - {{comment.first_name}} {{comment.last_name}} {{comment.phone}} {{comment.email}}</p>
+            <md-divider></md-divider>
+        </div>
+        <!-- <md-button ng-click="AIC.getComments()">View All</md-button> -->
+    </md-card>
+    <!-- </md-content> -->
+</md-content >
 
+<md-content layout-padding layout-margin>
 <br />
-<md-card><h3 layout-padding layout-margin layout-align="center center">Responses Overview</h3></md-card>
+
+<md-card>
+    <h2 layout-padding layout-margin layout-align="center center">Responses Overview</h2></md-card>
 <!-- <md-divider></md-divider> -->
 
-<div class= "charts" layout="row">
-<md-card layout-padding layout-margin flex>
-  <canvas id="myChart" width="400" height="400"></canvas>
-</md-card>
+<div class="charts" layout="row">
+    <md-card layout-padding layout-margin flex>
+        <canvas id="myChart" width="400" height="400"></canvas>
+    </md-card>
 
-  <md-card layout-padding layout-margin flex>
+    <md-card layout-padding layout-margin flex>
 
-  <canvas id="myChart2" width="400" height="400"></canvas>
-</md-card>
+        <canvas id="myChart2" width="400" height="400"></canvas>
+    </md-card>
 
-  <md-card layout-padding layout-margin flex>
+    <md-card layout-padding layout-margin flex>
 
-  <canvas id="myChart3" width="400" height="400"></canvas>
-</md-card>
+        <canvas id="myChart3" width="400" height="400"></canvas>
+    </md-card>
 </div>
-<div class= "charts2" layout="row">
+<div class="charts2" layout="row">
 
-  <md-card layout-padding layout-margin flex="33">
+    <md-card layout-padding layout-margin flex="33">
 
-  <canvas id="myChart4" width="400" height="400"></canvas>
-</md-card>
+        <canvas id="myChart4" width="400" height="400"></canvas>
+    </md-card>
 
-  <md-card layout-padding layout-margin flex="33">
+    <md-card layout-padding layout-margin flex="33">
 
-  <canvas id="myChart5" width="400" height="400"></canvas>
-</md-card>
+        <canvas id="myChart5" width="400" height="400"></canvas>
+    </md-card>
 
-</div>
+</div></md-content>
+
 
 </md-content>
