submit button also logs interns out

--- a/public/views/templates/feedbackform.html
+++ b/public/views/templates/feedbackform.html
@@ -147,8 +147,8 @@
 			</md-input-container>
 
 			<br />
-
-			<md-button class = "mainButtons" ng-click="FBFC.submitFeedback(comment, cb1)">Submit</md-button>
+			
+			<md-button class = "mainButtons" ng-click="FBFC.submitFeedback(comment, cb1)" ng-href="/">Submit</md-button>
 <!-- group1, group2, group3, group4, group5,  -->
 </md-content>
 	</DIV>
