--- a/public/views/templates/feedbackform.html
+++ b/public/views/templates/feedbackform.html
@@ -151,9 +151,9 @@
 
 <br />
 
-<md-button class = "mainButtons" ng-click="FBFC.submitFeedback(comment, cb1)" ng-href="/">Submit</md-button>
+<md-button class = "mainButtons" ng-click="FBFC.submitFeedback(comment, cb1)">Submit</md-button>
 
 <!-- <md-button class = "mainButtons" ng-click="FBFC.submitFeedback(comment, cb1)">Submit</md-button> -->
-<!-- group1, group2, group3, group4, group5,  -->
+<!-- group1, group2, group3, group4, group5,ng-href="/#/login"  -->
 </md-content>
 </DIV>
