--- a/public/views/templates/importExport.html
+++ b/public/views/templates/importExport.html
@@ -11,7 +11,7 @@
 
     <md-card layout-padding flex class="importFileContainer">
       <h2>Annual Intern Data Import</h2>
-      <h3>Please select the intern CSV file:</h3>
+      <h3>Please select the Intern .csv file:</h3>
       <input type="file" id="files" name="file" accept=".csv"/>
       <div id="progress_bar"><div class="percent">0%</div></div>
     </md-card>
@@ -25,7 +25,7 @@
   </md-content>
 <md-content class="pageContent">
     <md-card layout-padding>
-    <h2>Remove Interns from System</h2>
+    <h2>Edit Intern Information</h2>
     <!-- <h3>Last name: </h3> -->
     <md-input-container>
       <label>Search by last name</label>
