<meta name="viewport" content="width=device-width, initial-scale=1">

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Step Up Check In</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
   <link rel="icon" href="public/image/STEP-UP logo no tag with white.jpg" type="image/png">
   <!-- angular -->
