--- a/public/views/templates/feedbackform.html
+++ b/public/views/templates/feedbackform.html
@@ -1,3 +1,4 @@
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <div ng-init="FBFC.getQuestions()">
 	<!-- FBFC.checkEmail(FBFC.useremail) -->
 	<md-toolbar id="toolbar" layout="column">
@@ -12,11 +13,11 @@
 					<h3 class= "questionFeedback" >Question {{question.count}}: {{question.q_text}}</h3>
 					<div class="radioGroup">
 						<md-radio-group ng-model="question.data" ng-required="true">
-							<md-radio-button class= value="1"> 1 <img style="height:2vmin; width: 2vmin;" src="public/image/Very_sad_emoji_icon_png.png" alt=""></md-radio-button>
-							<md-radio-button class="radioButtons" value="2"> 2 <img style="height:2vmin; width: 2vmin;" src="public/image/Confused_Face_Emoji.png" alt=""></md-radio-button>
-							<md-radio-button class="radioButtons" value="3"> 3 <img style="height:2vmin; width: 2vmin;" src="public/image/Neutral_Face_Emoji.png" alt=""></md-radio-button>
-							<md-radio-button class="radioButtons" value="4"> 4 <img style="height:2vmin; width: 2vmin;" src="public/image/Slightly_Smiling_Face_Emoji.png" alt=""></md-radio-button>
-							<md-radio-button class="radioButtons" value="5"> 5 <img style="height:2vmin; width: 2vmin;" src="public/image/Smiling_Emoji_with_Eyes_Opened.png" alt=""></md-radio-button>
+							<md-radio-button value="1"> 1  <img style="height:6vmin; width: 6vmin;" src="public/image/Very_sad_emoji_icon_png.png" alt=""></md-radio-button>
+							<md-radio-button value="2"> 2  <img style="height:6vmin; width: 6vmin;" src="public/image/Confused_Face_Emoji.png" alt=""></md-radio-button>
+							<md-radio-button value="3"> 3  <img style="height:6vmin; width: 6vmin;" src="public/image/Neutral_Face_Emoji.png" alt=""></md-radio-button>
+							<md-radio-button value="4"> 4  <img style="height:6vmin; width: 6vmin;" src="public/image/Slightly_Smiling_Face_Emoji.png" alt=""></md-radio-button>
+							<md-radio-button value="5"> 5  <img style="height:6vmin; width: 6vmin;" src="public/image/Smiling_Emoji_with_Eyes_Opened.png" alt=""></md-radio-button>
 							<!-- <md-radio-button value="1"> not properly trained at all </md-radio-button>
 							<md-radio-button value="2"> not properly trained </md-radio-button>
 							<md-radio-button value="3"> somewhat properly trained</md-radio-button>
