--- a/public/views/templates/feedbackform2.html
+++ b/public/views/templates/feedbackform2.html
@@ -1,137 +1,49 @@
-<md-toolbar id="toolbar" layout="column">
-  <h1 id="toolBarText">Weekly Feedback</h1>
-</md-toolbar>
-<!-- <md-button ng-click="FBFC.getQuestions()">Get Questions</md-button> -->
 <md-content class="pageContent feedbackform">
+  <span layout="column" flex="33" class="toplogo"><img class="stepUp" src="public/image/STEP-UP logo no tag with white.jpg"></span>
+  <md-toolbar id="toolbar" layout="column">
+    <h2 id="toolBarText">Hi, Jim! Weekly Feedback</h2>
+  </md-toolbar>
   <form ng-submit="submit()" ng-cloak>
-
-    <!-- <div ng-repeat="question in FBFC.activeQuestions">
-      <div id="{{question.id}}">
-        <h3 class= "questionFeedback" >Question {{question.count}}: {{question.q_text}}</h3>
-        <md-radio-group ng-model="question.data" ng-required="true">
-
-          <md-radio-button value="1"> 1 </md-radio-button>
-          <md-radio-button value="2"> 2 </md-radio-button>
-          <md-radio-button value="3"> 3 </md-radio-button>
-          <md-radio-button value="4"> 4</md-radio-button>
-          <md-radio-button value="5"> 5</md-radio-button> -->
-          <!-- <md-radio-button value="1"> not properly trained at all </md-radio-button>
-          <md-radio-button value="2"> not properly trained </md-radio-button>
-          <md-radio-button value="3"> somewhat properly trained</md-radio-button>
-          <md-radio-button value="4"> properly trained</md-radio-button>
-          <md-radio-button value="5"> very properly trained</md-radio-button> -->
-
-        <!-- </md-radio-group> -->
-      <!-- </div> -->
-
-    <!-- </div> -->
-
-
-
-
-
-
-
-    <h3 ng-model="q1" value="2">Question 1: To what extent do you feel properly trained for your internship? </h3>
-
-    <!-- NOTE -->
-    <!-- each question will have to come dynamically from the get questions route, and also bring along it's question id -->
-
-    <!-- <p>Selected Value: <span class="radioValue">{{ group1 }}</span> </p> -->
-
+    <h3 ng-model="q1" value="2">To what extent do you feel properly trained for your internship? </h3><h5> 1 = not properly trained - 5 = very trained</h5>
     <md-radio-group ng-model="group1">
-
-
-    <!-- <md-button class = "mainButtons" ng-click="FBFC.submitFeedback(comment, cb1)" ng-href="/">Submit</md-button> -->
-
-    <md-radio-button value="1"> 1 </md-radio-button>
-    <md-radio-button value="2"> 2 </md-radio-button>
-    <md-radio-button value="3"> 3</md-radio-button>
-    <md-radio-button value="4"> 4</md-radio-button>
-    <md-radio-button value="5"> 5</md-radio-button>
-    <!-- <md-radio-button value="1"> not properly trained at all </md-radio-button>
-    <md-radio-button value="2"> not properly trained </md-radio-button>
-    <md-radio-button value="3"> somewhat properly trained</md-radio-button>
-    <md-radio-button value="4"> properly trained</md-radio-button>
-    <md-radio-button value="5"> very properly trained</md-radio-button> -->
-
+      <md-radio-button value="1"> 1  <img style="height:6vmin; width: 6vmin;" src="public/image/Very_sad_emoji_icon_png.png" alt=""></md-radio-button>
+      <md-radio-button value="2"> 2  <img style="height:6vmin; width: 6vmin;" src="public/image/Confused_Face_Emoji.png" alt=""></md-radio-button>
+      <md-radio-button value="3"> 3  <img style="height:6vmin; width: 6vmin;" src="public/image/Neutral_Face_Emoji.png" alt=""></md-radio-button>
+      <md-radio-button value="4"> 4  <img style="height:6vmin; width: 6vmin;" src="public/image/Slightly_Smiling_Face_Emoji.png" alt=""></md-radio-button>
+      <md-radio-button value="5"> 5  <img style="height:6vmin; width: 6vmin;" src="public/image/Smiling_Emoji_with_Eyes_Opened.png" alt=""></md-radio-button>
+    </md-radio-group>
+    <h3 ng-model="q2" value="3">How challenging are your daily work tasks?</h3><h5> 1 = not challenging - 5 = very challenging</h5>
+    <md-radio-group ng-model="group2">
+      <md-radio-button value="1"> 1  <img style="height:6vmin; width: 6vmin;" src="public/image/Very_sad_emoji_icon_png.png" alt=""></md-radio-button>
+      <md-radio-button value="2"> 2  <img style="height:6vmin; width: 6vmin;" src="public/image/Confused_Face_Emoji.png" alt=""></md-radio-button>
+      <md-radio-button value="3"> 3  <img style="height:6vmin; width: 6vmin;" src="public/image/Neutral_Face_Emoji.png" alt=""></md-radio-button>
+      <md-radio-button value="4"> 4  <img style="height:6vmin; width: 6vmin;" src="public/image/Slightly_Smiling_Face_Emoji.png" alt=""></md-radio-button>
+      <md-radio-button value="5"> 5  <img style="height:6vmin; width: 6vmin;" src="public/image/Smiling_Emoji_with_Eyes_Opened.png" alt=""></md-radio-button>
+    </md-radio-group>
+  <h3 ng-model="q3" value="4">How supportive is your supervisor?</h3><h5> 1 = not Supportive - 5 = very supportive</h5>
+  <md-radio-group ng-model="group3">
+    <md-radio-button value="1"> 1  <img style="height:6vmin; width: 6vmin;" src="public/image/Very_sad_emoji_icon_png.png" alt=""></md-radio-button>
+    <md-radio-button value="2"> 2  <img style="height:6vmin; width: 6vmin;" src="public/image/Confused_Face_Emoji.png" alt=""></md-radio-button>
+    <md-radio-button value="3"> 3  <img style="height:6vmin; width: 6vmin;" src="public/image/Neutral_Face_Emoji.png" alt=""></md-radio-button>
+    <md-radio-button value="4"> 4  <img style="height:6vmin; width: 6vmin;" src="public/image/Slightly_Smiling_Face_Emoji.png" alt=""></md-radio-button>
+    <md-radio-button value="5"> 5  <img style="height:6vmin; width: 6vmin;" src="public/image/Smiling_Emoji_with_Eyes_Opened.png" alt=""></md-radio-button>
   </md-radio-group>
-
-  <h3 ng-model="q2" value="3">Question 2: How challenging are your daily work tasks? </h3>
-  <!-- <p>Selected Value: <span class="radioValue">{{ group2 }}</span> </p> -->
-
-  <md-radio-group ng-model="group2">
-
-  <md-radio-button value="1"> 1 </md-radio-button>
-  <md-radio-button value="2"> 2 </md-radio-button>
-  <md-radio-button value="3"> 3</md-radio-button>
-  <md-radio-button value="4"> 4</md-radio-button>
-  <md-radio-button value="5"> 5</md-radio-button>
-  <!-- <md-radio-button value="1">not challenging at all</md-radio-button>
-  <md-radio-button value="2">not very challenging</md-radio-button>
-  <md-radio-button value="3">somewhat challenging</md-radio-button>
-  <md-radio-button value="4">challenging</md-radio-button>
-  <md-radio-button value="5">very challenging</md-radio-button> -->
-
-</md-radio-group>
-
-<h3 ng-model="q3" value="4">Question 3: How supportive is your supervisor? </h3>
-<!-- <p>Selected Value: <span class="radioValue">{{ group3 }}</span> </p> -->
-
-<md-radio-group ng-model="group3">
-
-<md-radio-button value="1"> 1 </md-radio-button>
-<md-radio-button value="2"> 2 </md-radio-button>
-<md-radio-button value="3"> 3</md-radio-button>
-<md-radio-button value="4"> 4</md-radio-button>
-<md-radio-button value="5"> 5</md-radio-button>
-<!-- <md-radio-button value="1">not supportive at all</md-radio-button>
-<md-radio-button value="2">not very supportive</md-radio-button>
-<md-radio-button value="3">somewhat supportive</md-radio-button>
-<md-radio-button value="4">supportive</md-radio-button>
-<md-radio-button value="5">very supportive</md-radio-button> -->
-
-</md-radio-group>
-
-<h3 ng-model="q4" value="5">Question 4: Do you like your internship? </h3>
-<!-- <p>Selected Value: <span class="radioValue">{{ group4 }}</span> </p> -->
-
-<md-radio-group ng-model="group4">
-
-<md-radio-button value="1"> 1 </md-radio-button>
-<md-radio-button value="2"> 2 </md-radio-button>
-<md-radio-button value="3"> 3</md-radio-button>
-<md-radio-button value="4"> 4</md-radio-button>
-<md-radio-button value="5"> 5</md-radio-button>
-<!-- <md-radio-button value="1">I do not like my internship at all</md-radio-button>
-<md-radio-button value="2">I don't really like my internship</md-radio-button>
-<md-radio-button value="3">My internship is okay</md-radio-button>
-<md-radio-button value="4">I like my internship</md-radio-button>
-<md-radio-button value="5">I like my internship very much!</md-radio-button> -->
-
-</md-radio-group>
-
-
-<div ng-model="q5" ng-value="6">
-<h3>Question 5: Do you feel welcome in your workplace? </h3>
-</div>
-<!-- <p>Selected Value: <span class="radioValue">{{ group5 }}</span> </p> -->
-
-<md-radio-group ng-model="group5">
-
-<md-radio-button value="1"> 1 </md-radio-button>
-<md-radio-button value="2"> 2 </md-radio-button>
-<md-radio-button value="3"> 3</md-radio-button>
-<md-radio-button value="4"> 4</md-radio-button>
-<md-radio-button value="5"> 5</md-radio-button>
-<!-- <md-radio-button value="1">I do not feel welcome in my workplace at all</md-radio-button>
-<md-radio-button value="2">I do not feel very welcome in my workplace</md-radio-button>
-<md-radio-button value="3">I feel somewhat welcome in my workplace</md-radio-button>
-<md-radio-button value="4">I feel welcome in my workplace</md-radio-button>
-<md-radio-button value="5">I feel very welcome in my workplace</md-radio-button> -->
-
-</md-radio-group>
-
+  <h3 ng-model="q4" value="5">Do you like your internship?</h3><h5>1 = I don't like it at all - 5 = I like it very much</h5>
+  <md-radio-group ng-model="group4">
+    <md-radio-button value="1"> 1  <img style="height:6vmin; width: 6vmin;" src="public/image/Very_sad_emoji_icon_png.png" alt=""></md-radio-button>
+    <md-radio-button value="2"> 2  <img style="height:6vmin; width: 6vmin;" src="public/image/Confused_Face_Emoji.png" alt=""></md-radio-button>
+    <md-radio-button value="3"> 3  <img style="height:6vmin; width: 6vmin;" src="public/image/Neutral_Face_Emoji.png" alt=""></md-radio-button>
+    <md-radio-button value="4"> 4  <img style="height:6vmin; width: 6vmin;" src="public/image/Slightly_Smiling_Face_Emoji.png" alt=""></md-radio-button>
+    <md-radio-button value="5"> 5  <img style="height:6vmin; width: 6vmin;" src="public/image/Smiling_Emoji_with_Eyes_Opened.png" alt=""></md-radio-button>
+  </md-radio-group>
+  <h3 ng-model="q5" ng-value="6">Do you feel welcome in your workplace?</h3><h5>1 = not welcome - 5 =  very welcome</h5>
+  <md-radio-group ng-model="group5">
+    <md-radio-button value="1"> 1  <img style="height:6vmin; width: 6vmin;" src="public/image/Very_sad_emoji_icon_png.png" alt=""></md-radio-button>
+    <md-radio-button value="2"> 2  <img style="height:6vmin; width: 6vmin;" src="public/image/Confused_Face_Emoji.png" alt=""></md-radio-button>
+    <md-radio-button value="3"> 3  <img style="height:6vmin; width: 6vmin;" src="public/image/Neutral_Face_Emoji.png" alt=""></md-radio-button>
+    <md-radio-button value="4"> 4  <img style="height:6vmin; width: 6vmin;" src="public/image/Slightly_Smiling_Face_Emoji.png" alt=""></md-radio-button>
+    <md-radio-button value="5"> 5  <img style="height:6vmin; width: 6vmin;" src="public/image/Smiling_Emoji_with_Eyes_Opened.png" alt=""></md-radio-button>
+  </md-radio-group>
 <br />
 <h3>Do you want someone from STEP-UP to contact you this week?</h3>
 <div flex-gt-sm="50">
@@ -139,18 +51,12 @@
   Yes, please talk with me.
 </md-checkbox>
 </div>
-
 <h3>Do you have any other comments?</h3>
 <md-input-container>
 <label>Write here:</label>
 <input ng-model="comment">
 </md-input-container>
-
 <br />
-
-<md-button class = "mainButtons" >Submit</md-button>
-
-<!-- <md-button class = "mainButtons" ng-click="FBFC.submitFeedback(comment, cb1)">Submit</md-button> -->
-<!-- group1, group2, group3, group4, group5,ng-href="/#/login"  -->
+<!-- <a href="http://192.168.9.4:3000/#/login" ></a> -->
+<md-button class="md-raised md-primary" ng-click="FBFC.submitFeedback(comment, cb1)" href="http://192.168.9.4:3000/#/login">Submit</md-button>
 </md-content>
-</DIV>
